改进：系统配置项directory.root改为DataGearWorkspace，便于通过环境变量配置工作目录；
其他：ECharts版本由4.9.0升级至5.1.2；


-----------------------------------------
--v2.7.0
-----------------------------------------

新增：新增箱形图内置图表插件；
新增：新增数据集、图表、看板的复制功能；
新增：看板编辑页面新增看板和图表JS对象函数自动补全功能；
新增：图表JS对象新增inflateRenderOptions、inflateUpdateOptions、renderOptions函数，弃用optionsUpdate函数；
新增：图表JS对象新增internal函数，替换已弃用的echartsInstance函数；
新增：图表JS对象新增loadMap函数，用于为加载通用图表地图提供支持；
新增：图表JS对象新增resultValueObjects、resultDatasFirst函数；
新增：图表JS对象新增dataSetParamValueFirst、dataSetParamValuesFirst函数；
修复：修复在图表监听器里调用另一图表的refreshData函数有时不起作用的BUG；
修复：修复看板、图表展示地址末尾不带'/'会导致网页未找到的BUG；
修复：修复横向柱状图的配置项中xAxis和yAxis配置效果颠倒的BUG；
修复：修复内置图表对于某些series配置项不起作用的BUG；
修复：修复自定义图表设置异步渲染、异步更新无效的BUG；
修复：修复K线图未显示坐标轴刻度标签的BUG；
改进：弃用看板JS对象的isWaitForRender、isWaitForUpdate函数，它们不应作为开放API；
改进：图表元素的地图配置dg-chart-map、chart.echartsLoadMap函数支持SVG格式的地图；
改进：图表JS对象的dataSetParamValuesFirst、dataSetParamValues函数支持设置数组类型的参数值；
改进：简化数据集、图表、看板访问地址，移除"/analysis"地址前缀；
改进：完善各内置图表组件对于日期类数据的坐标轴类型支持；
改进：SQL、CSV、JSON数据集添加防注入和自动转义参数值支持；
改进：看板展示页面标题中的"DataGear"标识由前缀改为后缀，且默认显示看板名称；
改进：图表编辑页面支持悬浮提示选中图表类型的描述信息；
改进：图表插件临时目录改为应用配置的临时目录，而非操作系统临时目录；


-----------------------------------------
--v2.8.0
-----------------------------------------

移除：移除管理员专有的数据源模式匹配授权功能，简化系统数据权限设计；
新增：新增数据源防护功能，使管理员可控制是否允许用户创建指定URL的数据源；
新增：图表、看板JS对象新增originalInfo函数，用于获取/设置图表展示数据的原始信息；
新增：图表JS对象新增resultData函数，用于获取/设置图表数据集结果数据；
新增：图表JS对象新增registerEventHandlerDelegation、removeEventHandlerDelegation函数，用于为图表事件处理提供支持；
新增：图表JS对象新增callEventHandler、echartsOffEventHandler函数，用于为图表事件处理提供支持；
新增：图表JS对象新增gradualColor函数，用于为图表配色提供支持；
修复：修复参数化数据集对于大数值参数可能出现精度丢失的BUG；
修复：修复数据管理列表/编辑页面、SQL工作台查询结果对于大数值会出现精度丢失的BUG；
修复：修复在已登录状态下打开/login地址会死循环的BUG；
改进：用户关联角色功能改为在用户编辑页面而非角色管理页面；
改进：系统添加缓存支持，大幅提升系统性能；
改进：标签卡图表添加横排配置项"inline"，配置项label.name简化为name，label.value简化为value；
改进：图表JS对象弃用eventBindHandlerDelegation、eventUnbindHandlerDelegation函数；
改进：看板编辑页面插入图表对话框改为悬浮面板，便于多次插入图表操作；
改进：登录页、注册页、重置密码页添加右上角系统菜单；
改进：程序发布包配置文件中添加DataGearWorkspace配置项模板；