@@ -499,9 +499,10 @@ DataGear版本更新日志
 移除：移除管理员专有的数据源模式匹配授权功能，简化系统数据权限设计；
 新增：新增数据源防护功能，使管理员可控制是否允许用户创建指定URL的数据源；
 新增：图表、看板JS对象新增originalInfo函数，用于获取/设置图表展示数据的原始信息；
-新增：图表JS对象新增resultData函数，用于获取/设置图表数据集结果数据；
 新增：图表JS对象新增registerEventHandlerDelegation、removeEventHandlerDelegation函数，用于为图表事件处理提供支持；
 新增：图表JS对象新增callEventHandler、echartsOffEventHandler函数，用于为图表事件处理提供支持；
+新增：图表JS对象新增resultData函数，用于获取/设置图表数据集结果数据；
+新增：图表JS对象新增resultDataElement函数，用于获取图表数据集结果数据指定索引的元素；
 新增：图表JS对象新增gradualColor函数，用于为图表配色提供支持；
 修复：修复参数化数据集对于大数值参数可能出现精度丢失的BUG；
 修复：修复数据管理列表/编辑页面、SQL工作台查询结果对于大数值会出现精度丢失的BUG；
